--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BrightSign Node.js Sample",
+  "name": "BrightSign-Node.js-Sample",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,7 @@
   "devDependencies": {
     "copy-webpack-plugin": "4.5.1",
     "webpack": "4.2.0",
-    "webpack-cli": "2.0.13",
+    "webpack-cli": "3.1.2",
     "zip-webpack-plugin": "3.0.0"
   },
   "dependencies": {
