--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
   "author": "support@brightsign.biz (http://www.brightsign.biz/)",
   "license": "MIT",
   "devDependencies": {
-    "copy-webpack-plugin": "5.1.1",
-    "webpack": "4.42.1",
-    "webpack-cli": "3.3.11",
-    "zip-webpack-plugin": "3.0.0"
+    "@babel/core": "7.13.16",
+    "@babel/preset-typescript": "7.13.0",
+    "@types/node": "15.0.1",
+    "babel-loader": "8.2.2",
+    "copy-webpack-plugin": "8.1.1",
+    "webpack": "5.36.1",
+    "webpack-cli": "4.6.0",
+    "zip-webpack-plugin": "4.0.1"
   },
   "dependencies": {
     "express": "4.17.1"
